sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departpos' in definition of a vehicle is empty.
Error: Invalid departpos definition for vehicle '1'
Quitting (on error).
